--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore: ^0.16.0
   provider: ^4.3.3
   flutter_spinkit: ^4.1.2+1
+  firebase_core: "^0.7.0"
+  firebase_database: "^6.0.0"
 
 dev_dependencies:
   flutter_test:
